add preloading spinner to all actors page

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,21 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    
+    <div id="app"><atom-spinner
+      :animation-duration="1000"
+      :size="60"
+      :color="'#ff1d5e'"
+ /></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<script>
+  import {AtomSpinner} from 'epic-spinners'
+  export default {
+    components: {
+      AtomSpinner
+    }
+  }
+</script>
